data/derived/comb/progs/unify/prog6432.ml.out
Characters 77-86:
  | (h::t) -> let h::t =xs in h+sumList t;;
                                ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
